syntax = "proto3";

package pb;

option go_package = "github.com/ssjh23/chord-go/pb";

message GetChordNodeRequest {
    string id = 1;
}

message GetChordNodeResponse {
    string id = 1;
    string ip = 2;
    int32 port = 3;
}

message GetRequestFromClient {
    string input = 1;
}

message GetResponseToClient {
    string inputFromClient = 1;
    string id = 2;
    string ip = 3;
    int32 port = 4;
}

